[project]
name = "blocksize-agentic-payments-mcp"
version = "0.1.0"
description = "Read-only MCP discovery package for Blocksize agentic market data and x402 HTTP endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Blocksize" }
]
dependencies = [
  "fastmcp>=2.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0"
]

[project.scripts]
blocksize-agentic-payments-mcp = "blocksize_agentic_payments_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blocksize_agentic_payments_mcp"]
